fix alignment issues and color scheme compliance

--- a/imports/plugins/included/default-theme/client/styles/homepage/styles.less
+++ b/imports/plugins/included/default-theme/client/styles/homepage/styles.less
@@ -7,10 +7,9 @@
   text-align: right;
 }
 
-
-
 .btn-shop {
   font-size: 1.5em;
+  font-weight: 2px;
   background-color: #324D5C;
   color: #fff;
   border-radius: 0px;
@@ -24,8 +23,7 @@
 }
 
 .brand-reaction {
-  background-color: #324D5C;
-  color: #fff;
+  color: #46B29D;
   font-size: 1.5em;
   font-weight: bold;
 }
@@ -83,11 +81,14 @@
 }
  
 .cat-card {
-  transition: transform .4s; 
+  transition: transform .4s;
+  width: 90%;
  }
+
 .cat-card:hover {
-  border-radius: 25px;
+  border: none;
   transform: scale(1.2);
+  z-index: 999;
 }
 .best-selling {
   margin-top: 50px;
@@ -227,7 +228,7 @@ ul {
 }
 
 .connected {
-  background-color: #BDBDBD;
+  background-color: #46B29D;
   height: 100%;
 }
 
@@ -242,7 +243,7 @@ ul {
 }
 
 footer {
-  background-color: #BDBDBD;
+  background-color: #46B29D;
   height: 40px;
   font-size: 1.3em;
 }
